# scalpel

./: .gitignore  CMakeLists.txt
cpp2json/: CMakeLists.txt
cpp2xml/: CMakeLists.txt
cpp2xml/src/cpp2xml/: semantic_graph.cpp  semantic_graph.hpp  semantic_graph.ipp  syntax_tree.hpp  syntax_tree.ipp
cpp2xml/src/cpp2xml/detail/: basic_print_functions.cpp  basic_print_functions.hpp  json_writer.cpp  json_writer.hpp  json_writer.ipp  type_to_string.hpp
demo/: CMakeLists.txt
demo/src/: basic_print_functions.cpp  basic_print_functions.hpp  main.cpp  semantic_graph_print_functions.cpp  semantic_graph_print_functions.hpp  syntax_tree_print_functions.hpp
test/: CMakeLists.txt
test/000/src/: main.cpp
test/001/: CMakeLists.txt
test/001/files/: test.cpp  test000.cpp  test001.cpp  test002.cpp  test003.cpp  test004.cpp  test005.cpp  test006.cpp  test007.cpp  test008.cpp  test009.cpp  test010.cpp  test011.cpp  test013.cpp
test/001/src/: main.cpp
test/common/: common_CMakeLists.txt
test/name_lookup/: class_using_declarations.cpp  qualified_and_typedef.cpp  test_case_1.cpp  test_case_11.cpp  test_case_12.cpp  test_case_13.cpp  test_case_4.cpp  test_case_6.cpp  test_case_7.cpp  test_case_8.cpp  test_case_9.cpp  unnamed_namespaces.cpp  using_declarations.cpp
test/resources/single_files/: test010.cpp
test/single_files/files/: test008.cpp
test/src/: SingleDeclarationTest.cpp  SingleDeclarationTest.h  SingleExpressionTest.cpp  SingleExpressionTest.h  SingleFileTest.cpp  SingleFileTest.h  SinglePreprocessingFileTest.cpp  SinglePreprocessingFileTest.h  get_file_list.cpp  get_file_list.hpp  get_recursive_file_list.cpp  get_recursive_file_list.hpp  main.cpp  single_declaration_test.cpp  single_declaration_test.h  single_file_test.cpp  single_file_test.h  single_file_test.hpp  single_preprocessing_file_test.cpp  single_preprocessing_file_test.h  standard_library_test.cpp  standard_library_test.h  standard_library_test.hpp
test/src/analysis/: .single_file_tester.cpp.swo  .single_file_tester.hpp.swo  linkage_test_file_set.hpp  linking_test_file_set.hpp  semantic_analysis_test_file_set.hpp  single_file_tester.cpp  single_file_tester.hpp
test/src/name_lookup/: base_classes.cpp  base_classes_2.cpp  class_using_declarations.cpp  enums.cpp  nested_unnamed_namespaces.cpp  qualified_and_typedef.cpp  test_case_1.cpp  test_case_1.hpp  test_case_10.cpp  test_case_10.hpp  test_case_11.cpp  test_case_11.hpp  test_case_12.cpp  test_case_13.cpp  test_case_2.cpp  test_case_2.hpp  test_case_3.cpp  test_case_3.hpp  test_case_4.cpp  test_case_4.hpp  test_case_5.cpp  test_case_5.hpp  test_case_6.cpp  test_case_6.hpp  test_case_7.cpp  test_case_7.hpp  test_case_8.cpp  test_case_8.hpp  test_case_9.cpp  test_case_9.hpp  unnamed_namespaces.cpp  using_declarations.cpp
test/src/semantic_analysis/: analyzer.cpp  analyzer.hpp  complex_class.cpp  complex_type.cpp  simple_class.cpp  simple_free_function.cpp
test/src/semantic_graph/: cycle_proof_equality.cpp  cycle_proof_equality2.cpp  cycle_proof_equality3.cpp
test/src/syntax_analysis/: single_file_tester.cpp  single_file_tester.hpp
test/src/variant/: exception_safety_test_case.cpp  exception_safety_test_case.hpp
test/testfiles/ambiguous_cases/: test002.cpp
test/testfiles/basic/: test000.cpp  test001.cpp  test002.cpp  test003.cpp  test005.cpp  test006.cpp  test007.cpp  test008.cpp  test009.cpp  test010.cpp  test011.cpp  test012.cpp  test013.cpp  test014.cpp  test015.cpp  test016.cpp  test017.cpp  test018.cpp  test019.cpp  test020.cpp  test021.cpp  test023.cpp  test024.cpp  test025.cpp  test026.cpp
test/testfiles/gcc/: test000.cpp  test002.cpp  test003.cpp
test/testfiles/linkage/: classes.1.cpp  classes.out  functions.out  functions2.2.cpp  functions2.out  namespaces.out
test/testfiles/linking/: classes.2.cpp  classes.out  functions.1.cpp  functions.2.cpp  functions.out  functions2.1.cpp  namespaces.1.cpp  namespaces.2.cpp
test/testfiles/name_lookup/: test000.cpp  test002.cpp  test005.cpp  test006.cpp  test010.cpp  test011.cpp  test015.cpp
test/testfiles/semantic_analysis/: .function_declaration_and_definition_matching.cpp.swo  anonymous_unions.cpp  anonymous_unions.out  bit_field.cpp  bit_field.cpp.out  bit_field.out  bit_field.xml  boolean_conversions.cpp  boolean_conversions.out.sem  c_style_struct.cpp  c_style_struct.out  class_forward_declaration.cpp  class_forward_declaration.cpp.out  class_forward_declaration.out  class_forward_declaration.xml  class_using_declarations.cpp  class_using_declarations.out.sem  complex_class.cpp  complex_class.cpp.out  complex_class.out  complex_class.xml  complex_type.cpp  complex_type.cpp.out  complex_type.out  complex_type.xml  complex_type2.cpp  complex_type2.cpp.out  complex_type2.out  complex_type2.xml  default_access.cpp  default_access.cpp.out  default_access.out  default_access.xml  default_arguments.cpp  default_arguments.out  enum.cpp  enum.cpp.out  enum.out  enum.xml  expressions.cpp  (+63 more)
test/testfiles/semantic_analysis/expressions/: boolean_conversions.out  expressions.cpp  expressions.out  expressions2.cpp  expressions2.out.sem  member_variables.cpp  member_variables.out.sem  simple_function_call.cpp  simple_function_call.out
test/testfiles/single_files/: test002.cpp  test003.cpp  test007.cpp  test009.cpp  test011.cpp  test016.cpp  test021.cpp  test023.cpp  test024.cpp  test027.cpp  test028.cpp  test030.cpp  test031.cpp
test/testfiles/single_files_with_pp_tokens/: 000.cpp
test/testfiles/single_preprocessing_files/: test000.cpp  test000.h  test002.cpp  test003.cpp  test005.cpp  test008.cpp  test010.cpp  test011.cpp  test013.cpp  test016.cpp  test017.cpp  test019.cpp  test020.cpp  test022.cpp  test023.cpp  test024.cpp  test025.cpp  test026.cpp  test027.cpp  test029.cpp
test/testfiles/standard_library/: test000.cpp  test001.cpp  test004.cpp  test006.cpp  test007.cpp  test009.cpp  test012.cpp  test014.cpp  test015.cpp  test018.cpp  test021.cpp  test028.cpp  test030.cpp
test/testfiles/template/: test000.cpp  test001.cpp  test002.cpp  test004.cpp  test005.cpp  test006.cpp  test007.cpp
(+2143 files in other folders)
